CU-868dp7xu3 - Add a hover state to newsletter button similar the featured product button to stay on theme.

--- a/css/styles.css
+++ b/css/styles.css
@@ -407,6 +407,10 @@ header {
   cursor: pointer;
 }
 
+.newsletter button:hover{
+  background-color: #005a9e;
+  }
+
 /* Footer */
 footer {
   background-color: #222;
