CU-868dttqza - Change color scheme;CU-868dtgtj1 - Change up the product card to match the index.html

--- a/css/shop-sidebar.css
+++ b/css/shop-sidebar.css
@@ -14,11 +14,16 @@
   border-radius: var(--border-radius);
   padding: 20px;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Widget Common Styling */
 .single-sidebar-widget-2 {
   margin-bottom: 30px;
+  padding: 20px;
+  border: 1px solid var(--border-color);
+
 }
 
 .single-sidebar-widget-2:last-child {
@@ -42,7 +47,7 @@
 /* Price Range Slider */
 .range__barcustom {
   width: 100%;
-  position: relative;
+  position: absolute ;
 }
 
 .slider {
