--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   box-sizing: inherit;
 }
 
+
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
@@ -160,6 +161,7 @@ header {
   text-align: right;
 }
 
+
 .checkout-btn {
   display: block;
   width: 100%;
@@ -194,7 +196,7 @@ header {
 .hero-content {
   max-width: 800px;
   padding: 2rem;
-}git merge --abort
+}
 
 .hero h1 {
   font-size: 3rem;
