Update navigation link in blog page and modify active link color in styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,9 +106,9 @@ header {
   font-weight: 500;
 }
 
-.nav-item a.active,
+.nav-item a:active,
 .nav-item a:hover {
-  color: var(--ultra-violet);
+  color: var(--carolina-blue);
 }
 
 /* Cart */
